--- a/index.html
+++ b/index.html
@@ -15,6 +15,42 @@
             <nav class="navbar navbar-dark bg-dark">
                 <span class="navbar-brand mb-0 h1">Search Parameters</span>
             </nav>
+            <div class="row">
+                <div class="col-md-12">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Search Term:</label>
+                            <input type="text" class="form-control" id="search-term" placeholder="Search Term">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">Number of Records to Retrieve:</label>
+                            <select class="form-control" id="records-number">
+                                <option>1</option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                                <option>6</option>
+                                <option>7</option>
+                                <option>8</option>
+                                <option>9</option>
+                                <option>10</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">Start Year (optional):</label>
+                            <input type="text" class="form-control" id="start-year" placeholder="Start Year">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">End Year (optional):</label>
+                            <input type="text" class="form-control" id="end-year" placeholder="End Year">
+                        </div>
+                        <div>
+                            <button style="margin-bottom: 12px;" id="search-button" type="button" class="btn btn-primary">Search</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
             
         </div>
         <script src="nytimesTemp.js"></script>
