--- a/index.html
+++ b/index.html
@@ -51,7 +51,15 @@
                     </form>
                 </div>
             </div>
-            
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-dark bg-dark">
+                        <span class="navbar-brand mb-0 h1">Top Articles</span>
+                    </nav>
+                </div>
+                <div class="col-md-12" id="display-results">
+                </div>
+            </div>
         </div>
         <script src="nytimesTemp.js"></script>
 </body>
